syntax = "proto3";
package kubeappsapis.plugins.kapp_controller.packages.v1alpha1;
option go_package = "github.com/kubeapps/kubeapps/cmd/kubeapps-apis/gen/plugins/kapp_controller/packages/v1alpha1";

import "google/api/annotations.proto";
import "kubeappsapis/core/packages/v1alpha1/packages.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service KappControllerPackagesService {
  // GetAvailablePackageSummaries returns the available packages managed by the 'kapp_controller' plugin
  rpc GetAvailablePackageSummaries(kubeappsapis.core.packages.v1alpha1.GetAvailablePackageSummariesRequest) returns (kubeappsapis.core.packages.v1alpha1.GetAvailablePackageSummariesResponse) {
    option (google.api.http) = {
      get: "/plugins/kapp_controller/packages/v1alpha1/availablepackagesummaries"
    };
  };
  
  // GetPackageRepositories returns the repositories managed by the 'kapp_controller' plugin
  rpc GetPackageRepositories(kubeappsapis.core.packages.v1alpha1.GetPackageRepositoriesRequest) returns (kubeappsapis.core.packages.v1alpha1.GetPackageRepositoriesResponse) {
    option (google.api.http) = {
      get: "/plugins/kapp_controller/packages/v1alpha1/packagerepositories"
    };
  };
}
